Made the site somewhat responsive

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
     <!-- Header nav -->
     <div class="header-nav">
       <p class="brand">Simple Chat App</p>
-      <div class="display-name-container" v-if="displayName">
+
+      <div class="navigation-container" :class="{open : burgerMenuOpen}" v-if="displayName">
         <!-- Users online -->
         <p>Users online:
           <span class="bold">{{ usersOnline }} </span>
@@ -43,6 +44,14 @@
 
         <!-- Change display name  -->
         <button @click="changeDisplayName" class="button outline">Change display name</button>
+      </div>
+
+      <div @click="{burgerMenuOpen = !burgerMenuOpen}" class="burger-menu-toggle">
+        <svg v-if="!burgerMenuOpen" viewBox="0 0 24 24">
+          <path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+        </svg>
+        <svg v-if="burgerMenuOpen" viewBox="0 0 24 24">
+          <path d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" /> </svg>
       </div>
     </div>
     <!-- / Header nav -->
@@ -87,7 +96,7 @@
     <div class="new-message-container">
       <div class="inner-container">
         <textarea v-model="clientMessage" @keyup.enter.exact="sendMessage" placeholder="Type your message here.."></textarea>
-        <button @click="sendMessage" class="button" :class="{ disabled : !clientMessage }">Send message</button>
+        <button @click="sendMessage" class="button" :class="{ disabled : !clientMessage }">Send</button>
       </div>
     </div>
     <!-- / New message container -->
