--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,17 @@
   <script src="https://cdn.jsdelivr.net/npm/TinyAnimate@0.4.0/src/TinyAnimate.min.js"></script>
   <!-- Custom script file -->
   <script src="script.js"></script>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39761709-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-39761709-3');
+  </script>
 </body>
 
 </html>
