--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 
 <head>
   <title>Simple Chat App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,500" rel="stylesheet">
 </head>
